--- a/css/colors/theme-skin-red.css
+++ b/css/colors/theme-skin-red.css
@@ -3,19 +3,19 @@
 @URL: http://themeforest.net/user/ThemeMascot
 
 COLOR : Red
-COLOR CODE: #EE163B
+COLOR CODE: #c8102e
 ----------------------------------------- */
 /* text-theme-color */
 .text-theme-colored {
-  color: #EE163B !important;
+  color: #c8102e !important;
 }
 /* text-hover-theme-color */
 .text-hover-theme-colored:hover {
-  color: #EE163B !important;
+  color: #c8102e !important;
 }
 /* background-theme-color */
 .bg-theme-colored {
-  background-color: #EE163B !important;
+  background-color: #c8102e !important;
 }
 .bg-theme-colored-lighter2 {
   background-color: #ef2447 !important;
@@ -68,8 +68,8 @@ COLOR CODE: #EE163B
 }
 /* bg-hover-theme-color */
 .bg-hover-theme-colored:hover {
-  background: #EE163B !important;
-  border-color: #EE163B !important;
+  background: #c8102e !important;
+  border-color: #c8102e !important;
   color: #fff !important;
 }
 .bg-hover-theme-colored:hover h1,
@@ -85,13 +85,13 @@ COLOR CODE: #EE163B
 }
 /* border-theme-color */
 .border-theme-colored {
-  border-color: #EE163B !important;
+  border-color: #c8102e !important;
 }
 .progress-item .progress-bar .percent {
-  background: #EE163B;
+  background: #c8102e;
 }
 .causes .progress-item .progress-bar .percent {
-  border-color: #EE163B !important;
+  border-color: #c8102e !important;
 }
 .team-member .member-info {
   background-color: rgba(238, 22, 59, 0.7) !important;
@@ -114,10 +114,10 @@ COLOR CODE: #EE163B
 }
 .icon-box.box-style1.practice-style3:hover .icon-wrapper,
 .zeus .tp-bullet::after {
-  background-color: #EE163B;
+  background-color: #c8102e;
 }
 .preloader-dot-loading .cssload-loading i {
-  background: #EE163B !important;
+  background: #c8102e !important;
 }
 /*
  * background: theme-color
@@ -156,10 +156,10 @@ COLOR CODE: #EE163B
 .title-icon::before,
 .line-bottom:after,
 .title-dots span {
-  background: #EE163B;
+  background: #c8102e;
 }
 .ui-state-highlight {
-  background: #EE163B !important;
+  background: #c8102e !important;
   color: #fff !important;
 }
 /*
@@ -200,10 +200,10 @@ ul.list.theme-colored.check li:before,
 .donation-form .form-group label,
 .title-icon [class^="flaticon-"]::after,
 .title-icon [class^="flaticon-"]::before {
-  color: #EE163B;
+  color: #c8102e;
 }
 .star-rating span::before {
-  color: #EE163B !important;
+  color: #c8102e !important;
 }
 /*
  * border: theme-color
@@ -213,21 +213,21 @@ ul.list.theme-colored.check li:before,
 .widget .line-bottom:after,
 .widget .line-bottom:after,
 .pager.theme-colored a {
-  border: 1px solid #EE163B;
+  border: 1px solid #c8102e;
 }
 .border-theme-colored,
 .owl-theme .owl-dots .owl-dot span {
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
 .icon-box.box-style1.practice-style3:hover .icon-wrapper::after {
-  border-color: #EE163B transparent transparent;
+  border-color: #c8102e transparent transparent;
 }
 .opening-hours ul li {
-  border-bottom: 1px dashed #EE163B;
+  border-bottom: 1px dashed #c8102e;
 }
 /* border-left-color */
 blockquote.theme-colored {
-  border-left: 3px solid #EE163B;
+  border-left: 3px solid #c8102e;
 }
 blockquote.bg-theme-colored {
   border-left: 3px solid #c30e2d;
@@ -238,64 +238,79 @@ blockquote.bg-theme-colored footer {
 }
 blockquote.gray.bg-theme-colored {
   background-color: #eeeeee !important;
-  border-left: 3px solid #EE163B;
-  color: #EE163B;
+  border-left: 3px solid #c8102e;
+  color: #c8102e;
 }
 blockquote.gray.bg-theme-colored footer {
   color: #777777;
 }
 .attorney-address li {
-  border-left: 1px solid #EE163B;
+  border-left: 1px solid #c8102e;
 }
 .section-title.title-border {
-  border-left: 4px solid #EE163B;
+  border-left: 4px solid #c8102e;
 }
 /* border-top-color */
 .member-info {
-  border-top: 3px outset #EE163B;
+  border-top: 3px outset #c8102e;
 }
 .cssload-tri {
-  border-top: 27px solid #EE163B;
+  border-top: 27px solid #c8102e;
 }
 /* border-right-color */
 .border-right-red {
-  border-right: 1px solid #EE163B;
+  border-right: 1px solid #c8102e;
 }
 .section-title.title-border.title-right {
-  border-right: 4px solid #EE163B;
+  border-right: 4px solid #c8102e;
 }
 /* border-bottom-color */
 .event {
-  border-bottom-color: #EE163B;
+  border-bottom-color: #c8102e;
 }
 .cssload-tri.cssload-invert {
-  border-bottom: 27px solid #EE163B;
+  border-bottom: 27px solid #c8102e;
 }
 /* box-shadow */
 /*
  * btn-default: theme-color
  * -----------------------------------------------
 */
+#btn-coti {
+  font-weight: 700;
+  border-color: #25282a;
+  border-width: 0.20em;
+  background-color: #ede939; 
+  color: #25282a;
+}
+
+#btn-coti:hover {
+  font-weight: 700;
+  border-color: #25282a;
+  background-color: #c8102e; 
+  color: white;
+}
+
 .btn-default.btn-theme-colored {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #fff;
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
 .btn-default.btn-theme-colored:focus,
 .btn-default.btn-theme-colored.focus {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #e6e6e6;
   border-color: #7b091d;
 }
 .btn-default.btn-theme-colored:hover {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #e6e6e6;
   border-color: #b90e2b;
 }
 .btn-default.btn-theme-colored:active,
 .btn-default.btn-theme-colored.active,
 .open > .dropdown-toggle.btn-default.btn-theme-colored {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #e6e6e6;
   border-color: #b90e2b;
 }
@@ -308,7 +323,7 @@ blockquote.gray.bg-theme-colored footer {
 .btn-default.btn-theme-colored:active.focus,
 .btn-default.btn-theme-colored.active.focus,
 .open > .dropdown-toggle.btn-default.btn-theme-colored.focus {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #d4d4d4;
   border-color: #7b091d;
 }
@@ -327,17 +342,17 @@ fieldset[disabled] .btn-default.btn-theme-colored:focus,
 .btn-default.btn-theme-colored[disabled].focus,
 fieldset[disabled] .btn-default.btn-theme-colored.focus {
   background-color: #fff;
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
 .btn-default.btn-theme-colored .badge {
   color: #fff;
-  background-color: #EE163B;
+  background-color: #c8102e;
 }
 .btn-default.btn-theme-colored:hover,
 .btn-default.btn-theme-colored:active,
 .btn-default.btn-theme-colored:focus {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
   color: #fff;
 }
 /*
@@ -345,25 +360,25 @@ fieldset[disabled] .btn-default.btn-theme-colored.focus {
  * -----------------------------------------------
 */
 .btn-border.btn-theme-colored {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #fff;
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
 .btn-border.btn-theme-colored:focus,
 .btn-border.btn-theme-colored.focus {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #e6e6e6;
   border-color: #7b091d;
 }
 .btn-border.btn-theme-colored:hover {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #e6e6e6;
   border-color: #b90e2b;
 }
 .btn-border.btn-theme-colored:active,
 .btn-border.btn-theme-colored.active,
 .open > .dropdown-toggle.btn-border.btn-theme-colored {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #e6e6e6;
   border-color: #b90e2b;
 }
@@ -376,7 +391,7 @@ fieldset[disabled] .btn-default.btn-theme-colored.focus {
 .btn-border.btn-theme-colored:active.focus,
 .btn-border.btn-theme-colored.active.focus,
 .open > .dropdown-toggle.btn-border.btn-theme-colored.focus {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #d4d4d4;
   border-color: #7b091d;
 }
@@ -395,11 +410,11 @@ fieldset[disabled] .btn-border.btn-theme-colored:focus,
 .btn-border.btn-theme-colored[disabled].focus,
 fieldset[disabled] .btn-border.btn-theme-colored.focus {
   background-color: #fff;
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
 .btn-border.btn-theme-colored .badge {
   color: #fff;
-  background-color: #EE163B;
+  background-color: #c8102e;
 }
 .btn-border.btn-theme-colored:hover,
 .btn-border.btn-theme-colored:active,
@@ -414,8 +429,8 @@ fieldset[disabled] .btn-border.btn-theme-colored.focus {
 */
 .btn-dark.btn-theme-colored {
   color: #fff;
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
 }
 .btn-dark.btn-theme-colored:focus,
 .btn-dark.btn-theme-colored.focus {
@@ -462,11 +477,11 @@ fieldset[disabled] .btn-dark.btn-theme-colored:focus,
 .btn-dark.btn-theme-colored.disabled.focus,
 .btn-dark.btn-theme-colored[disabled].focus,
 fieldset[disabled] .btn-dark.btn-theme-colored.focus {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
 }
 .btn-dark.btn-theme-colored .badge {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #fff;
 }
 /*
@@ -481,19 +496,19 @@ fieldset[disabled] .btn-dark.btn-theme-colored.focus {
 .btn-gray.btn-theme-colored:focus,
 .btn-gray.btn-theme-colored.focus {
   color: #fff;
-  background-color: #ee163b;
+  background-color: #c8102e;
   border-color: #ab0c28;
 }
 .btn-gray.btn-theme-colored:hover {
   color: #fff;
-  background-color: #ee163b;
+  background-color: #c8102e;
   border-color: #e91136;
 }
 .btn-gray.btn-theme-colored:active,
 .btn-gray.btn-theme-colored.active,
 .open > .dropdown-toggle.btn-gray.btn-theme-colored {
   color: #fff;
-  background-color: #ee163b;
+  background-color: #c8102e;
   border-color: #e91136;
 }
 .btn-gray.btn-theme-colored:active:hover,
@@ -536,8 +551,8 @@ fieldset[disabled] .btn-gray.btn-theme-colored.focus {
 */
 .btn-theme-colored {
   color: #fff;
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
 }
 .btn-theme-colored:focus,
 .btn-theme-colored.focus {
@@ -584,11 +599,11 @@ fieldset[disabled] .btn-theme-colored:focus,
 .btn-theme-colored.disabled.focus,
 .btn-theme-colored[disabled].focus,
 fieldset[disabled] .btn-theme-colored.focus {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
 }
 .btn-theme-colored .badge {
-  color: #EE163B;
+  color: #c8102e;
   background-color: #fff;
 }
 /*
@@ -611,8 +626,8 @@ fieldset[disabled] .btn-theme-colored.focus {
   border-color: #000000;
 }
 .btn-transparent.btn-dark.btn-theme-colored {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
 }
 .btn-transparent.btn-dark.btn-theme-colored:hover {
   background-color: #c30e2d;
@@ -628,10 +643,10 @@ fieldset[disabled] .btn-theme-colored.focus {
 }
 .btn-transparent.btn-border.btn-theme-colored {
   background-color: transparent;
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
 .btn-transparent.btn-border.btn-theme-colored:hover {
-  background-color: #EE163B;
+  background-color: #c8102e;
   color: #fff;
 }
 .btn-gray.btn-transparent {
@@ -651,8 +666,8 @@ fieldset[disabled] .btn-theme-colored.focus {
   color: #e6e6e6;
 }
 .btn-hover-theme-colored:hover {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
   color: #fff;
 }
 /*
@@ -660,17 +675,17 @@ fieldset[disabled] .btn-theme-colored.focus {
  * -----------------------------------------------
 */
 .icon-theme-colored a {
-  color: #EE163B;
+  color: #c8102e;
 }
 .icon-theme-colored.icon-bordered a {
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
 .icon-theme-colored.icon-bordered a:hover {
-  background-color: #EE163B;
+  background-color: #c8102e;
   color: #fff;
 }
 .icon-theme-colored.icon-dark a {
-  background-color: #EE163B;
+  background-color: #c8102e;
   color: #fff;
 }
 .icon-theme-colored.icon-dark a:hover {
@@ -678,39 +693,39 @@ fieldset[disabled] .btn-theme-colored.focus {
   color: #e6e6e6;
 }
 .icon-theme-colored.icon-dark.icon-bordered a {
-  border-color: #EE163B;
-  color: #EE163B;
+  border-color: #c8102e;
+  color: #c8102e;
 }
 .icon-theme-colored.icon-dark.icon-bordered a:hover {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
   color: #fff;
 }
 .icon-theme-colored.icon-gray a {
-  color: #EE163B;
+  color: #c8102e;
 }
 .icon-theme-colored.icon-gray a:hover {
   color: #c30e2d;
 }
 .icon-theme-colored.icon-gray.icon-bordered a {
-  color: #EE163B;
+  color: #c8102e;
 }
 .icon-theme-colored.icon-gray.icon-bordered a:hover {
   background-color: #eeeeee;
   border-color: #eeeeee;
-  color: #EE163B;
+  color: #c8102e;
 }
 .icon-theme-colored a:hover {
   color: #c30e2d;
 }
 .icon-hover-theme-colored a:hover {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
   color: #fff;
 }
 .social-icons.icon-hover-theme-colored a:hover {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
   color: #fff;
 }
 /*
@@ -718,32 +733,32 @@ fieldset[disabled] .btn-theme-colored.focus {
  * -----------------------------------------------
 */
 .icon-box.iconbox-theme-colored .icon {
-  color: #EE163B;
+  color: #c8102e;
 }
 .icon-box.iconbox-theme-colored .icon.icon-border-effect::after {
-  box-shadow: 0 0 0 3px #EE163B;
+  box-shadow: 0 0 0 3px #c8102e;
 }
 .icon-box.iconbox-theme-colored .icon.icon-bordered {
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
 .icon-box.iconbox-theme-colored .icon.icon-bordered:hover {
-  background-color: #EE163B;
+  background-color: #c8102e;
   color: #fff;
 }
 .icon-box.iconbox-theme-colored .icon.icon-gray:hover {
-  background-color: #EE163B;
+  background-color: #c8102e;
   color: #fff;
 }
 .icon-box.iconbox-theme-colored .icon.icon-gray.icon-bordered {
   border-color: #eeeeee;
 }
 .icon-box.iconbox-theme-colored .icon.icon-gray.icon-bordered:hover {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
   color: #fff;
 }
 .icon-box.iconbox-theme-colored .icon.icon-dark {
-  background-color: #EE163B;
+  background-color: #c8102e;
   color: #fff;
 }
 .icon-box.iconbox-theme-colored .icon.icon-dark:hover {
@@ -751,32 +766,32 @@ fieldset[disabled] .btn-theme-colored.focus {
 }
 .icon-box.iconbox-theme-colored .icon.icon-dark.icon-bordered {
   background-color: transparent;
-  border-color: #EE163B;
-  color: #EE163B;
+  border-color: #c8102e;
+  color: #c8102e;
 }
 .icon-box.iconbox-theme-colored .icon.icon-dark.icon-bordered:hover {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
   color: #fff;
 }
 .icon-box.iconbox-theme-colored .icon.icon-white {
   background-color: #fff;
-  color: #EE163B;
+  color: #c8102e;
 }
 .icon-box.iconbox-theme-colored .icon.icon-white:hover {
-  background-color: #EE163B;
+  background-color: #c8102e;
   color: #fff;
 }
 .icon-box.iconbox-theme-colored .icon.icon-white.icon-bordered {
   background-color: transparent;
-  border-color: #EE163B;
+  border-color: #c8102e;
   color: #fff;
 }
 .icon-box.iconbox-theme-colored .icon.icon-white.icon-bordered:hover {
-  background-color: #EE163B;
-  border-color: #EE163B;
+  background-color: #c8102e;
+  border-color: #c8102e;
   color: #fff;
 }
 .icon-box.iconbox-theme-colored.iconbox-border {
-  border-color: #EE163B;
+  border-color: #c8102e;
 }
