--- a/css/utility-classes.css
+++ b/css/utility-classes.css
@@ -97,7 +97,7 @@
   color: #fefefe !important;
 }
 .text-red {
-  color: #e4002b !important;
+  color: #fff !important;
   font-size: 50px;
 }
 /* -------- Solid Color Background ---------- */
